[tool.poetry]
name = "energy"
version = "0.1.0"
description = ""
authors = ["Pavlo Nahornyi <pavelnagornyj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.2"
telegram = "^0.0.1"
python-telegram-bot = "^20.8"
telepot = "^12.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
